--- a/src/styles.css
+++ b/src/styles.css
@@ -414,9 +414,7 @@ h2 {
   justify-content: space-between;
 }
 
-.avatar {
-  border-radius: 50%;
-}
+
 
 .comments-section {
   margin-top: 20px;
@@ -431,4 +429,177 @@ h2 {
 .comment .avatar {
   margin-right: 10px;
 }
+
 /* dropdown */
+
+.title {
+  display: flex;
+  align-items: flex-start;
+}
+
+.tag {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 4px;
+  background: #f7f7f7;
+  color: #1c1c1c;
+  text-align: center;
+  padding: 0 4px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 9px;
+  line-height: 16px;
+  border: 1px solid #e8e8e8;
+  border-radius: 96px;
+}
+
+.block {
+	padding: 1rem;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.06),
+		0px 1px 1px rgba(0, 0, 0, 0.08);
+	border-radius: 8px;
+	display: block;
+	&-header {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin-bottom: 16px;
+		.title {
+			display: flex;
+			align-items: flex-start;
+			.tag {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				margin-left: 4px;
+				background: #f7f7f7;
+				color: #1c1c1c;
+				text-align: center;
+				padding: 0 4px;
+				letter-spacing: 0.04em;
+				text-transform: uppercase;
+				font-weight: 500;
+				font-size: 10px;
+				line-height: 16px;
+				border: 1px solid #e8e8e8;
+				border-radius: 96px;
+			}
+		}
+	}
+}
+.writing {
+	background: #ffffff;
+	border: 1px solid #e8e8e8;
+	border-radius: 8px;
+	overflow: hidden;
+	margin-bottom: 24px;
+	padding: 12px;
+	.textarea {
+		width: 100%;
+		font-family: "Inter";
+		color: #585757;
+		height: 50px;
+		overflow-y: auto;
+		appearance: none;
+		border: 0;
+		outline: 0;
+		resize: none;
+		font-size: 16px;
+		line-height: 24px;
+	}
+	&:focus-within {
+		border: 1px solid #0085ff;
+		box-shadow: 0px 0px 2px 2px rgba(0, 133, 255, 0.15);
+	}
+	.footer {
+		margin-top: 12px;
+		padding-top: 12px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		border-top: 1px solid #e8e8e8;
+		.text-format {
+			display: flex;
+			align-items: center;
+			gap: 12px;
+		}
+	}
+}
+.comment {
+	display: grid;
+	gap: 10px;
+	.user-banner {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		.user {
+			gap: 1px;
+			align-items: center;
+			display: flex;
+			.avatar {
+				height: 32px;
+				width: 32px;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				border: 1px solid transparent;
+				position: relative;
+				border-radius: 100px;
+				font-weight: 500;
+				font-size: 13px;
+				line-height: 20px;
+				img {
+					max-width: 100%;
+					border-radius: 50%;
+				}
+			}
+		}
+	}
+	.footer {
+		gap: 12px;
+		display: flex;
+		align-items: center;
+		.reactions {
+			display: flex;
+			align-items: center;
+			gap: 8px;
+		}
+	}
+	&:not(.comment:first-child) {
+		padding-bottom: 12px;
+		margin-bottom: 12px;
+		border-bottom: 1px solid #e8e8e8;
+	}
+	& + & {
+		padding-top: 12px;
+	}
+
+}
+	.divider {
+		width: 1px;
+		background: #e8e8e8;
+	}
+
+
+.avatarComments{
+  background-color:#e9f0ff;
+  border-color:#bddfff; 
+  color:#0081f9
+}
+
+
+.avatarName {
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 24px;
+	color: #1c1c1c;
+	letter-spacing: 0em;
+	text-align: left;
+}
+
+.commentsDate{
+  font-size: x-small;
+
+}
